--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -90,7 +90,7 @@
             <p><b>Owner:</b> John Lennon</p>
           </div><!-- end user -->
           <div class="description">
-            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
+            <p> 2 individuals can stay in this nice 1 bathroom apartment. It is in the center of Shanghai, near to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -136,7 +136,7 @@
             <p><b>Owner:</b> Addrienne</p>
           </div><!-- end user -->
           <div class="description">
-            <p>Our place is a privete, afffordable satan-alone guest house centrally located just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint, 400 suare ft. with a full bath, mini kitchen, & livin room. The extra high cellings make the home feel more spacious. The sofa converts to bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</p>
+            <p>Private, affordable satan-alone guest cottage minutes from French Quarters, downtown Fair Grounds (Jazz Fest), and City Park. The charming 400-square-foot guest home has a complete bath, little kitchen, and living room. Extra high ceilings make the home feel bigger. Sofa turns to bed. A handcrafted bar gives charm to the space, and we have a nice porch/deck to relax and drink Merlot.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -174,7 +174,7 @@
             <p><b>Owner:</b> Mick Jagger</p>
           </div><!-- end user -->
           <div class="description">
-            <p>First loft built by Holbies. It contains a decked terrace, jacuzzi, firepit, rabbits garden, two rooms, two balconies, entrance gate, private garden, private parking, BBQ area, AC in each bedroom, technological equipment, luxury beds, and mountain views. Ideal for architecture lovers, romantic dates, or having a good time. It is a unique space of his kind. Only pets that do not harm rabbits are allowed.</p>
+            <p>Holbies' first loft. A covered terrace, jacuzzi, firepit, rabbit garden, two rooms, two balconies, access gate, private garden, private parking, BBQ area, AC in each bedroom, technical equipment, luxury bedding, and mountain views are included. Perfect for architectural lovers, romantic dates, or fun. Unique space of his sort. Only rabbit-safe pets are allowed.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -218,7 +218,7 @@
             <p><b>Owner:</b>John Seena</p>
           </div><!-- end user -->
           <div class="description">
-            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
+            <p> 2 individuals can stay in this nice 1 bathroom apartment. It is in the center of Shanghai, near to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -266,7 +266,7 @@
             <p><b>Owner:</b> John Lennon</p>
           </div><!-- end user -->
           <div class="description">
-            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
+            <p> 2 individuals can stay in this nice 1 bathroom apartment. It is in the center of Shanghai, near to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -314,7 +314,7 @@
             <p><b>Owner:</b> John Lennon</p>
           </div><!-- end user -->
           <div class="description">
-            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
+            <p> 2 individuals can stay in this nice 1 bathroom apartment. It is in the center of Shanghai, near to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
